[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/Inventory/Number_Counter.gd" type="Script" id=1]

[node name="Number_Counter" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemCostLabel" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 25.0
rect_min_size = Vector2( 125, 25 )
size_flags_vertical = 1
text = "Item Cost"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 29.0
margin_right = 1024.0
margin_bottom = 73.0

[node name="ItemCostText" type="LineEdit" parent="HBoxContainer"]
margin_right = 809.0
margin_bottom = 44.0
rect_min_size = Vector2( 75, 25 )
size_flags_horizontal = 3
align = 1
placeholder_text = "0"
caret_blink = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 813.0
margin_right = 1024.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.26

[node name="Add_Button" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_right = 211.0
margin_bottom = 20.0
text = "+"

[node name="Sub_Button" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 211.0
margin_bottom = 44.0
text = "-"

[connection signal="button_up" from="HBoxContainer/VBoxContainer/Add_Button" to="." method="_on_Add_Button_button_up"]
[connection signal="button_up" from="HBoxContainer/VBoxContainer/Sub_Button" to="." method="_on_Sub_Button_button_up"]
